# atri_login

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/compat/: mirai.rs  mod.rs
