[package]
name = "rq_login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ricq = "0.1.15"
serde = "1"
serde_json = "1"
tokio = "1"
bytes = "1"
tracing = "0"
tracing-subscriber = "0"

[profile.release]
lto = true
opt-level = 3
incremental = false
strip = true
codegen-units = 1