[package]
name = "atri_login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ricq = "0"
serde = "1"
serde_json = "1"
bytes = "1"
tracing = "0"
tracing-subscriber = "0"
qrcode = { version = "0", default-features = false }
rqrr = "0"
image = "0"

[dependencies.tokio]
version = "1"
features = ["rt", "io-std", "io-util", "fs"]

[profile.release]
panic = "abort"
lto = true
strip = true
opt-level = "z"
codegen-units = 1